--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@ionic-native/core": "4.7.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "^4.7.0",
-    "@ionic/storage": "2.1.3",
+    "@ionic/storage": "^2.1.3",
     "angularfire2": "^5.0.0-rc.10",
     "cordova-android": "~7.0.0",
     "cordova-plugin-device": "^2.0.2",
@@ -33,6 +33,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^2.3.3",
     "firebase": "^5.0.4",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -53,7 +54,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-statusbar": {}
+      "cordova-plugin-statusbar": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android"
