--- a/package.json
+++ b/package.json
@@ -22,12 +22,20 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.11.0",
     "@ionic-native/splash-screen": "~4.11.0",
-    "@ionic-native/status-bar": "~4.11.0",
+    "@ionic-native/status-bar": "^4.11.0",
     "@ionic/storage": "^2.1.3",
     "angularfire2": "^5.0.0-rc.11",
+    "cordova-android": "~7.0.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.2",
+    "cordova-plugin-ionic-webview": "^2.0.2",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.3.3",
     "firebase": "^5.3.1",
     "ionic-angular": "3.9.2",
+    "ionic-text-avatar": "^1.1.0",
     "ionicons": "3.0.0",
     "promise-polyfill": "^8.0.0",
     "rxjs": "^6.2.2",
@@ -42,7 +50,16 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-sqlite-storage": {}
-    }
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-statusbar": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
