--- a/package.json
+++ b/package.json
@@ -1,75 +1,81 @@
 {
-    "name": "asdi-app-farm",
-    "version": "0.0.1",
-    "author": "Ionic Framework",
-    "homepage": "http://ionicframework.com/",
-    "private": true,
-    "scripts": {
-        "start": "ionic-app-scripts serve",
-        "clean": "ionic-app-scripts clean",
-        "build": "ionic-app-scripts build",
-        "lint": "ionic-app-scripts lint"
+  "name": "asdi-app-farm",
+  "version": "0.0.1",
+  "author": "Ionic Framework",
+  "homepage": "http://ionicframework.com/",
+  "private": true,
+  "scripts": {
+    "start": "ionic-app-scripts serve",
+    "clean": "ionic-app-scripts clean",
+    "build": "ionic-app-scripts build",
+    "lint": "ionic-app-scripts lint"
+  },
+  "dependencies": {
+    "@angular/animations": "5.2.11",
+    "@angular/common": "5.2.11",
+    "@angular/compiler": "5.2.11",
+    "@angular/compiler-cli": "5.2.11",
+    "@angular/core": "5.2.11",
+    "@angular/forms": "5.2.11",
+    "@angular/http": "5.2.11",
+    "@angular/platform-browser": "5.2.11",
+    "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/android-permissions": "^4.11.0",
+    "@ionic-native/core": "~4.11.0",
+    "@ionic-native/diagnostic": "^4.11.0",
+    "@ionic-native/file": "^4.11.0",
+    "@ionic-native/file-opener": "^4.11.0",
+    "@ionic-native/file-transfer": "^4.11.0",
+    "@ionic-native/splash-screen": "~4.11.0",
+    "@ionic-native/status-bar": "^4.11.0",
+    "@ionic/storage": "^2.1.3",
+    "angularfire2": "^5.0.0-rc.11",
+    "cordova-android": "^6.2.3",
+    "cordova-plugin-android-permissions": "^1.0.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-opener2": "^2.0.19",
+    "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-ionic-keyboard": "^2.1.2",
+    "cordova-plugin-ionic-webview": "^2.0.2",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^2.3.3",
+    "cordova.plugins.diagnostic": "^4.0.8",
+    "firebase": "^5.3.1",
+    "ionic-angular": "3.9.2",
+    "ionic-img-viewer": "^2.9.0",
+    "ionic-text-avatar": "^1.1.0",
+    "ionicons": "3.0.0",
+    "promise-polyfill": "^8.0.0",
+    "rxjs": "^6.2.2",
+    "rxjs-compat": "^6.2.2",
+    "sw-toolbox": "3.6.0",
+    "zone.js": "0.8.26"
+  },
+  "devDependencies": {
+    "@ionic/app-scripts": "3.1.11",
+    "typescript": "~2.6.2"
+  },
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-opener2": {},
+      "cordova-plugin-android-permissions": {},
+      "cordova.plugins.diagnostic": {}
     },
-    "dependencies": {
-        "@angular/animations": "5.2.11",
-        "@angular/common": "5.2.11",
-        "@angular/compiler": "5.2.11",
-        "@angular/compiler-cli": "5.2.11",
-        "@angular/core": "5.2.11",
-        "@angular/forms": "5.2.11",
-        "@angular/http": "5.2.11",
-        "@angular/platform-browser": "5.2.11",
-        "@angular/platform-browser-dynamic": "5.2.11",
-        "@ionic-native/core": "~4.11.0",
-        "@ionic-native/file": "^4.11.0",
-        "@ionic-native/file-opener": "^4.11.0",
-        "@ionic-native/file-transfer": "^4.11.0",
-        "@ionic-native/splash-screen": "~4.11.0",
-        "@ionic-native/status-bar": "^4.11.0",
-        "@ionic/storage": "^2.1.3",
-        "angularfire2": "^5.0.0-rc.11",
-        "cordova-android": "^6.2.3",
-        "cordova-plugin-device": "^2.0.2",
-        "cordova-plugin-file": "^6.0.1",
-        "cordova-plugin-file-opener2": "^2.0.19",
-        "cordova-plugin-file-transfer": "^1.7.1",
-        "cordova-plugin-ionic-keyboard": "^2.1.2",
-        "cordova-plugin-ionic-webview": "^2.0.2",
-        "cordova-plugin-splashscreen": "^5.0.2",
-        "cordova-plugin-statusbar": "^2.4.2",
-        "cordova-plugin-whitelist": "^1.3.3",
-        "cordova-sqlite-storage": "^2.3.3",
-        "firebase": "^5.3.1",
-        "ionic-angular": "3.9.2",
-        "ionic-img-viewer": "^2.9.0",
-        "ionic-text-avatar": "^1.1.0",
-        "ionicons": "3.0.0",
-        "promise-polyfill": "^8.0.0",
-        "rxjs": "^6.2.2",
-        "rxjs-compat": "^6.2.2",
-        "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.26"
-    },
-    "devDependencies": {
-        "@ionic/app-scripts": "3.1.11",
-        "typescript": "~2.6.2"
-    },
-    "description": "An Ionic project",
-    "cordova": {
-        "plugins": {
-            "cordova-sqlite-storage": {},
-            "cordova-plugin-whitelist": {},
-            "cordova-plugin-device": {},
-            "cordova-plugin-splashscreen": {},
-            "cordova-plugin-ionic-webview": {},
-            "cordova-plugin-ionic-keyboard": {},
-            "cordova-plugin-statusbar": {},
-            "cordova-plugin-file-transfer": {},
-            "cordova-plugin-file": {},
-            "cordova-plugin-file-opener2": {}
-        },
-        "platforms": [
-            "android"
-        ]
-    }
+    "platforms": [
+      "android"
+    ]
+  }
 }
